--- a/MarsRover/build.gradle
+++ b/MarsRover/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation group: 'org.mongodb', name: 'mongodb-driver', version: '3.6.3'
 }
 
 test {
